--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@prisma/client": "^3.7.0",
+    "apollo-server-micro": "^3.6.1",
+    "graphql": "^16.2.0",
+    "micro-cors": "^0.1.1",
     "next": "^12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2"
